 eliminates many interface quirks.
-Windows use scroll bar when the data does not fit.
-The widget that displays the cards is now a full webbrowser, with e.g. 
 support for Javascript, animated gifs, ...	
-Move to SQL as the storage backend, resulting in improved speed and memory
 usage, as well as better scalability for large decks. Majority of work done
 by Ed Bartosh.
-Vhen importing a sound or an image, a copy is made to the .mnemosyne directory. 
 This saves some confusing explaining to new users about the difference between 
 relative and absolute paths.
-Mnemosyne now saves after each reviewed card.
-'Activate cards' is completely revamped and is much more flexible. Also, sets of
 active cards can be now be saved for easier later recall.
-Avoid showing the same card twice in a row.
-Added option "learn new related cards in same session".
-Replaced 'number of grade 0 cards to hold in your hand' by 'number of non 
 memorised cards to hold in your hand', so that the limit now works on the
 total of grade 0 and 1 cards. Default value is 10.
-Warn if the user memorises over 15 new cards in a session.
-The keyboard shortcuts for the reviewing process no long auto-repeat.
-Hooked up the machinery to allow embedding video in cards, but on my machine
 only the sound plays. Hopefully, later versions of Qt will fix this.
-Added option to control whether media (sound/video) gets started automatically
 when displaying a card.
-Added option to display a media control (play/pause/slider)
-Improved backup scheme. Users can now restore from backups using the 
 File - Open menu, as opposed to first decompressing a file outside of Mnemosyne.
-The learing history is now stored in an SQL database, allowing to calculate
 more statistics
-Graphical statistics (Mike Appleby)
-The plugin mechanism encompasses also the statistics, configuration and card
 activation screens.
-Cards which are failed during learning ahead are now periodically brought
 back in the learning process.